# SnapDataExplorer

./: .editorconfig  .gitignore  .releaserc.json  AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PHASED_PLAN.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  snapchat_data_explorer_agent_execution_contract.md  snapchat_data_explorer_project_requirements_concept (1).md  snapchat_data_explorer_technical_architecture.md  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  gh-pages.yml  release.yml  semantic-release.yml
docs/: getting-started.html  index.html
scripts/: easy_setup_mac.sh  gatekeeper_fix.sh  release-manual.sh  release.sh  update-versions.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  downloader.rs  error.rs  lib.rs  main.rs  models.rs  storage.rs
src-tauri/src/ingestion/: detector.rs  extractor.rs  media_linker.rs  mod.rs  parser.rs
src/components/: AboutModal.tsx  ChatView.tsx  ChillGallery.tsx  ChillView.tsx  ConversationList.tsx  Dashboard.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  GalleryView.tsx  MemoriesView.tsx  SearchView.test.tsx  SearchView.tsx  SetupFlow.tsx  Sidebar.tsx  Toast.tsx  Updater.tsx
src/hooks/: useTheme.test.ts  useTheme.ts  useToast.ts  (+2 more)
(+22 files in other folders)
